firmware/lib/control-table/tests/ui/missing_repr_c.rs
use control_table::Block;

#[derive(Block)]
struct NoRepr {
    x: u8,
}

fn main() {}
